--- a/NokiaHslVisualisation/app/build.gradle
+++ b/NokiaHslVisualisation/app/build.gradle
@@ -90,20 +90,33 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.fragment:fragment-ktx:1.3.2'
+    implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation 'com.google.ar:core:1.23.0'
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
-    implementation 'com.google.ar.sceneform:core:1.17.1'
-    implementation "com.google.ar.sceneform:animation:1.17.1"
-    implementation 'com.google.android.material:material:1.4.0-alpha01'
+
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //AR
+    implementation 'com.google.ar:core:1.23.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
+    implementation 'com.google.ar.sceneform:core:1.17.1'
+    implementation "com.google.ar.sceneform:animation:1.17.1"
+    implementation 'com.google.ar.sceneform:assets:1.17.1'
+
+    // Glide - An image loading and caching library for Android
+    // https://github.com/bumptech/glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //location library
+    implementation 'com.github.appoly:ARCore-Location:1.2'
+
     // Recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
     // OSMDroid
     implementation 'org.osmdroid:osmdroid-android:6.1.6'
