--- a/NokiaHslVisualisation/build.gradle
+++ b/NokiaHslVisualisation/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         maven {
             url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
         }
@@ -29,6 +30,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
             authentication {
